# aoalias_py

./: LICENSE  README.md  build.ps1  pyproject.toml  utest.ps1
src/aoalias/: __init__.py  core.py  keys.py
tests/: test_resolve_addr.py
